@@ -338,8 +338,8 @@ Module30Name=Invoices
 Module30Desc=Invoices and credit note's management for customers. Invoice's management for suppliers
 Module40Name=Suppliers
 Module40Desc=Supplier's management and buying (orders and invoices)
-Module42Name=Syslog
-Module42Desc=Logging facilities (syslog)
+Module42Name=Logs
+Module42Desc=Logging facilities (file, syslog, ...)
 Module49Name=Editors
 Module49Desc=Editor's management
 Module50Name=Products
@@ -1112,15 +1112,15 @@ UseEcoTaxeAbility=Support Eco-Taxe (WEEE)
 SetDefaultBarcodeTypeProducts=Default barcode type to use for products
 SetDefaultBarcodeTypeThirdParties=Default barcode type to use for third parties
 ##### Syslog #####
-SyslogSetup=Syslog module setup
-SyslogOutput=Log output
+SyslogSetup=Logs module setup
+SyslogOutput=Logs outputs
 SyslogSyslog=Syslog
 SyslogFacility=Facility
 SyslogLevel=Level
 SyslogSimpleFile=File
 SyslogFilename=File name and path
 YouCanUseDOL_DATA_ROOT=You can use DOL_DATA_ROOT/dolibarr.log for a log file in Dolibarr "documents" directory. You can set a different path to store this file.
-ErrorUnknownSyslogConstant=Constant %s is not a known syslog constant
+ErrorUnknownSyslogConstant=Constant %s is not a known Syslog constant
 ##### Donations #####
 DonationsSetup=Donation module setup
 DonationsReceiptModel=Template of donation receipt
