@@ -128,7 +128,7 @@ SystemTools= Outils Système
 SystemToolsArea= Espace outils systèmes
 SystemToolsAreaDesc= Cet espace offre des fonctions d'administration diverses. Utilisez le menu pour choisir la fonctionnalité recherchée.
 PurgeAreaDesc= Cette page vous permet d'effacer tous les fichiers construits ou stockés par Dolibarr (fichiers temporaires ou tous les fichiers du répertoire <b>%s</b>). L'utilisation de cette fonction n'est pas nécessaire. Elle est fournie pour les utilisateurs qui hébergent Dolibarr chez un hébergeur qui n'offre pas les permissions de supprimer les fichiers sauvegardés par le serveur Web.
-PurgeDeleteLogFile= Effacer le fichier log <b>%s</b> défini pour le module Syslog (pas de risque de perte de données)
+PurgeDeleteLogFile= Effacer le fichier log <b>%s</b> défini pour le module 'Logs et traces' (pas de risque de perte de données)
 PurgeDeleteTemporaryFiles= Effacer tous les fichiers temporaires (pas de risque de perte de données)
 PurgeDeleteAllFilesInDocumentsDir= Effacer tous les fichiers du répertoire <b>%s</b>. Les fichiers temporaires mais aussi les fichiers dumps de sauvegardes de bases, les fichiers joints aux éléments (tiers, factures, ...) ou fichiers stockés dans le module GED seront irrémédiablement effacés.
 PurgeRunNow= Lancer la purge maintenant
@@ -339,8 +339,8 @@ Module30Name= Factures et avoirs
 Module30Desc= Gestion des factures et avoirs clients. Gestion des factures fournisseurs
 Module40Name= Fournisseurs
 Module40Desc= Gestion des fournisseurs et achats (commandes et factures)
-Module42Name= Syslog
-Module42Desc= Utilisation de logs (syslog)
+Module42Name= Logs et traces
+Module42Desc= Génération de logs (fichiers, syslog, ...)
 Module49Name= Éditeurs
 Module49Desc= Gestion des éditeurs
 Module50Name= Produits
@@ -1120,7 +1120,7 @@ UseEcoTaxeAbility= Prise en charge des éco-taxes (DEEE)
 SetDefaultBarcodeTypeProducts= Type de code-barres utilisé par défaut pour les produits
 SetDefaultBarcodeTypeThirdParties= Type de code-barres utilisé par défaut pour les tiers
 ##### Syslog #####
-SyslogSetup= Configuration du module Syslog
+SyslogSetup= Configuration du module Logs et traces
 SyslogOutput= Sortie des log
 SyslogSyslog= Syslog
 SyslogFacility= Facility
